Atualizar altura dos cards

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
     <section class="main-bottom ">
       <div class="row">
         <div class="col-sm-3 mb-3 mb-sm-0">
-          <div class="card toScale" style="width: 18rem;">
+          <div class="card h-100 toScale" style="width: 18rem;">
             <img src="./images/camera-de-seguranca (1).png" class="card-img-top" alt="cftv">
             <div class="card-body">
               <p class="card-text">
@@ -137,7 +137,7 @@
       </div>
       <div class="row">
         <div class="col-sm-6 mb-3 mb-sm-0">
-          <div class="card toScale" style="width: 18rem;">
+          <div class="card h-100 toScale" style="width: 18rem;">
             <img src="./images/area-de-trabalho (1).png" class="card-img-top" alt="...">
             <div class="card-body">
               <p class="card-text">
@@ -150,7 +150,7 @@
       </div>
       <div class="row">
         <div class="col-sm-6  mb-3 mb-sm-0">
-          <div class="card toScale" style="width: 18rem;">
+          <div class="card h-100 toScale" style="width: 18rem;">
             <img src="./images/redes-de-computadores.png" class="card-img-top" alt="...">
             <div class="card-body">
               <p class="card-text">
@@ -163,7 +163,7 @@
       </div>
       <div class="row">
         <div class="col-sm-6 mb-3 mb-sm-0">
-          <div class="card toScale" style="width: 18rem;">
+          <div class="card h-100 toScale" style="width: 18rem;">
             <img src="./images/curso-online.png" class="card-img-top" alt="Aulas online de programação">
             <div class="card-body">
               <p class="card-text">
@@ -176,7 +176,7 @@
       </div>
       <div class="row">
         <div class="col-sm-6 mb-3 mb-sm-0">
-          <div class="card toScale" style="width: 18rem;">
+          <div class="card h-100 toScale" style="width: 18rem;">
             <img src="./images/responsivo.png" class="card-img-top" alt="Desenvolvimento de sites">
             <div class="card-body">
               <p class="card-text">
@@ -189,7 +189,7 @@
       </div>
       <div class="row">
         <div class="col-sm-6  mb-3 mb-sm-0">
-          <div class="card toScale" style="width: 18rem;">
+          <div class="card h-100 toScale" style="width: 18rem;">
             <img src="./images/alarme.png" class="card-img-top" alt="Alarmes Residenciais">
             <div class="card-body">
               <p class="card-text">
