Update: button Whatsapp float

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,6 +11,7 @@
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <link rel="stylesheet" href="./css/style.css">
 </head>
+
 <body>
   <header>
     <div class="above" id="home">
@@ -246,7 +248,15 @@
         </p>
       </div>
     </section>
+
   </main>
+  <!-- LOGO WHATSAPP FLOAT -->
+      <div class="container-whatsapp">
+        <a href="https://api.whatsapp.com/send?phone=5521992409894&text=Gostaria%20de%20um%20or%C3%A7amento%20por%20favor!" target="_blank" rel="noopener noreferrer">
+          <img src="./images/whatsapp.png" alt="Logo whatsapp" class="btn-whatsapp">
+        </a>
+      </div>
+
   <footer>
     <div class="footer-content">
       <div class="contact">
@@ -272,7 +282,7 @@
       </div>
     </div>
     <div class="footer-bottom" id="contatos">
-      Copyright&copy Gabriel Moraes 2023
+      <p class="copy">Copyright&copy Gabriel Moraes 2023</p>
     </div>
   </footer>
   <!-- JS bootstrap -->
