--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
         </div>
       </div>
     </section>
-    <div class="title-cards toRight">
+    <div class="title-cards">
       <h3>Soluções</h3>
     </div>
     <section class="main-bottom ">
